[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version= "1.0.132", features = ["derive"]}
uuid = { version = "0.8.2", features = ["v4"]}
ring = "0.16.20"
bs58 = "0.4.0"
