[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
data-encoding = "2.3.2"
num-bigint = "0.4.3"
ring = "0.16.20"
rust-crypto = "0.2.36"
serde = { version= "1.0.132", features = ["derive"]}
sled = "0.34.7"
uuid = { version = "0.8.2", features = ["v4"]}
